# promql-proxy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  settings.toml
docker/: docker-compose.yaml  grafana-datasource.yml  prom-dev.yml  prom-prod.yml  prometheus.yml  settings.toml  victoriametrics.yml
helm-chart/: Chart.yaml
helm-chart/templates/: configmap.yaml  deployment.yaml  service.yaml
src/: config.rs  handlers.rs  logging.rs  main.rs  models.rs  promql.rs
