[package]
name = "promql-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
promql-parser = "0.6.0"
serde = { version = "1.0.228", features = ["derive", "std"]}
tokio = { version="1.48.0", features = ["full"] }
http-body-util = "0.1.0"
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "query", "rustls"] }
serde_json = "1.0"
